@@ -1,3 +1,9 @@
+
+2004-11-04  Alan Horkan <horkana@maths.tcd.ie>
+
+	* cong-menus.c: added some stock menu icons, 
+	tweaked some mnemonics, added F12 for Revert.  
+
 2004-11-05 Michèle Garoche  <michele.garoche@easyconnect.fr>
 
 	* tree.c: 
